# OpenFps

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md
dev-resources/: install.nsi  openfps_icon.psd
resources/: LICENSE.txt  manifest.vrmanifest  thirdparty.txt
src/: DashboardOverlay.cpp  DashboardOverlay.h  HandOverlay.cpp  HandOverlay.h  ImGuiOverlayWindow.cpp  ImGuiOverlayWindow.h  ImHelper.h  Main.cpp  Overlay.cpp  Overlay.hpp  PerformanceOverlay.cpp  PerformanceOverlay.h  Settings.cpp  TaskMonitor.cpp  TaskMonitor.hpp  VRAMMonitor.cpp  VRAMMonitor.hpp  VrOverlay.h  VrUtils.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanUtils.h  config.hpp
src/backends/: imgui_impl_openvr.cpp
src/core/: Settings.cpp  Settings.hpp  TaskMonitor.cpp  TaskMonitor.hpp
src/extension/ImGui/: note.txt
src/extension/ImGui/backends/: imgui_impl_openvr.cpp  imgui_impl_openvr.h
src/extension/OpenVR/: VrUtils.h
src/helper/: ImHelper.h  VulkanHelper.h
src/overlay/: Overlay.cpp  Overlay.hpp
src/overlay/controller/: ControllerOverlay.cpp  ControllerOverlay.h
src/overlay/dashboard/: DashboardOverlay.cpp  DashboardOverlay.h
src/renderer/: VulkanRenderer.cpp  VulkanRenderer.h
